More post event updates, update email content

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -258,6 +258,10 @@ em label {
   font-weight: bold !important;
 }
 
+.bold {
+  font-weight: 600;
+}
+
 .centered {
   display: -webkit-flex;
   display: -moz-flex;
