--- a/app/views/user_mailer/school_activated_email.html.erb
+++ b/app/views/user_mailer/school_activated_email.html.erb
@@ -6,15 +6,15 @@
   <body>
     <p>Dear <%= @user.first_name %> <%= @user.last_name%>,</p>
     <p>
-      Your registration has been approved, and you can now access INCS’s Online Resume Bank <a href="http://www.teacherjobfair.org/sessions/new">here</a>.<br>
+      Your registration has been approved, and you can now access the INCS Resume Bank at <a target="_blank" href="http://www.teacherjobfair.org/sessions/new">www.teacherjobfair.org</a>. Search for candidates, browse through their registration summaries, and download the resumes that you select.<br>
     </p>
 
     <p>
-      With your account, you can search for candidates that meet your team needs, browse through their registration summaries, and download the resumes that you select.<br>
+    Please use the email and password you entered on the registration page to log in. If you have forgotten your login credentials, please select "forgot password" on the bottom of the log-in page, <a target="_blank" href="http://www.teacherjobfair.org/sessions/new">here</a>.
     </p>
 
     <p>
-      If you need any assistance using our database, please do not hesitate to contact me at the information below. <br>
+      If you need any assistance using our database, or if you have any feedback about the site, please do not hesitate to contact me at the information below. <br>
     </p>
 
     <p>
