--- a/app/views/user_mailer/school_email.html.erb
+++ b/app/views/user_mailer/school_email.html.erb
@@ -9,7 +9,7 @@
       Thank you for your interest in the INCS Resume Bank! Your registration has been received.  Please allow up to 3 business days for INCS staff to review and process approval of your account. If delayed, please contact me directly at the email below.<br>
     </p>
     <p>
-      Once approved, you will receive a confirmation email and will be able to search for candidates and access their contact information to set up interviews according to your unique recruitment process and timeline.
+    Once approved, you will receive a confirmation email and will be able to search for candidates and access their contact information to set up interviews according to your unique recruitment process and timeline. Please take note of the email and password you entered on the registration form, and use these to log into the Resume Bank at <a href="http://www.teacherjobfair.org">www.teacherjobfair.org</a>.
     </p>
     <p>
       Please let me know if you have any questions!<br>
