--- a/app/views/user_mailer/teacher_email.html.erb
+++ b/app/views/user_mailer/teacher_email.html.erb
@@ -13,19 +13,15 @@
     <br>
     </p>
     <p>
-    Please keep your username and password for your records. You can log into your account at any time to:
-    <ul>
-      <li>Register for the 2017 INCS Teacher Job Fair on Saturday, March 18th, if you haven't already. Find more info on the <a href="www.teacherjobfair.org">INCS Resume Bank Homepage</a> and <a href="https://www.incschools.org/events/tjf/">INCS Events Page</a>.</li>
-      <li>Update or delete your resume.</li>
-      <li>Change your profile.</li>
-    </ul>
+    Please keep your username and password for your records. You can log into your account at any time to upload, edit, or delete any part of your profile.
     </p>
 
-    <p>For those who registered for the job fair, logistics emails and reminders will be sent over the next few weeks. In the meantime, be sure to check the resume bank homepage and INCS website for any updates.</p>
-    <p>Know someone interested in career opportunities as a teacher, clinician, or administrator? Please consider forwarding the blurb below.</p>
-    <p>Best of luck with your job search, and do not hesitate to contact me should you have any questions.</p>
+    <p>Have you checked out our Jobs Board? Feel free to look at part-time and full-time positions across the state <a href="https://www.incschools.org/jobs/jobs-at-charter-schools/">here</a>.</p>
+
+    <p>If you need any assistance using our database, please do not hesitate to contact me at the information below.</p>
 
     <p>
+    Best,<br>
     <em>Stephanie Arias</em>
     <br> Charter Support Manager
     <br> Illinois Network of Charter Schools
@@ -38,15 +34,5 @@
     <br>
     </p>
 
-    <em>Thank you for sharing the blurb below.</em>
-    <p>The Illinois Network of Charter Schools (INCS) will host its <a href="www.incschools.org/tjf">12th annual Teacher Job Fair</a> on Saturday, March 18, 2017 at ASPIRA Business & Finance Campus. Representatives from the state’s charter schools will be on hand to recruit hundreds of teachers, social workers, counselors, nurses, and other administrators - such as marketing managers, college coaches, and finance operators.  You can learn more about the FREE fair and upload your resume to the year-round resume bank <a href="www.teacherjobfair.org">here</a>.</p>
-    <p>Some of the great features of the job fair include:</p>
-    <ul>
-      <li>Free networking opportunity + access to over 100 school leaders looking to hire talented candidates</li>
-      <li>Opportunity to interview on-site following the meet-and-greet portion of the fair, by invite only</li>
-      <li>A year-round <a href="www.teacherjobfair.org">online resume bank</a> where candidates can submit their info to the 145+ campuses and set up interviews <u>remotely</u></li>
-      <li>Per charter law, students and alumni of all academic backgrounds are welcome to apply</li>
-    </ul>
-    <p>For more information, contact Charter Support Manager, Stephanie Arias, at <a href="mailto:sarias@incschools.org" target="_top">sarias@incschools.org</a>.</p>
   </body>
 </html>
