--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -23,31 +23,26 @@
     </div>
   <% end %>
 
-  <h2 class="topic">
-    <br>
-    2017 INCS Teacher Job Fair
-  </h2>
-
   <p class="main-content">
     <p class="main-content">
-      The Illinois Network of Charter Schools (INCS) hosted our 12th annual Teacher Job Fair on Saturday, March 18, 2017 at ASPIRA Business and Finance High School. Representatives from the state’s charter schools were on hand to recruit hundreds of teachers, social workers, counselors, nurses, and other administrators.
+      The Illinois Network of Charter Schools (INCS) hosted our 12th annual Teacher Job Fair on Saturday, March 18, 2017 at ASPIRA Business and Finance High School. Representatives from the state’s charter schools were on hand to recruit hundreds of teachers, social workers, counselors, nurses, and other administrators. Details about the 2018 Teacher Job Fair will be announced this fall.
     </p>
     <p class="main-content">
-      INCS continues to seek highly qualified candidates who are excited to work in a mission-driven environment and to TEACH, LEAD, and SUCCEED. To upload your resume into our <span style="text-decoration: underline">year-round database</span>, please select “Candidate Resume Bank Registration” above.
+      Illinois charter schools continue to seek highly qualified candidates who are excited to work in a mission-driven environment and to TEACH, LEAD, and SUCCEED. To upload your resume into our <span style="text-decoration: underline">year-round database</span>, please select “Candidate Resume Bank Registration” above.
     </p>
     <p class="main-content">
-      Did you know INCS also has a jobs board? To browse current openings in Illinois charter public schools, please visit us <a href="https://www.incschools.org/jobs/jobs-at-charter-schools/">here</a>.
+    Did you know INCS also has a <span class="bold">jobs board</span>? To browse current openings in Illinois charter public schools, please visit us <a href="https://www.incschools.org/jobs/jobs-at-charter-schools/">here</a>.
     </p>
     <p class="main-content">
       <span style="text-decoration: underline">To find a charter public school near you, please visit us <a href="https://www.incschools.org/about-charters/find-a-charter-school/">here</a></span>.
     </p>
     <p class="main-content">
-      If you have any questions or would like to receive a 2017 Teacher Job Fair flyer, please contact Stephanie Arias, INCS Charter Support Manager, at <%=mail_to("SArias@incschools.org")%>
+      If you have any questions about this tool or the Illinois Network of Charter Schools,  or would like to receive a 2017 Teacher Job Fair flyer, please contact Stephanie Arias, INCS Charter Support Manager, at <%=mail_to("SArias@incschools.org")%>
     </p>
   </p>
 
   <p class="main-content grayed">
-    ABOUT INCS: The Illinois Network of Charter Schools (INCS) advocates for the improvement of public education by leveraging the charter school model as a catalyst to transform lives and communities. INCS works to ensure that charter public schools have adequate and equitable resources, the autonomy to find innovative approaches to meet student needs, and a fair and transparent policy landscape that allows high-quality options to thrive. As the voice of Illinois charter schools, INCS engages a diverse coalition of policymakers, school leaders, parents, and community members to create systemic change and secure high-quality schools for undeserved communities. Learn more about us <a href="www.incschools.org/">here</a>. 
+    ABOUT INCS: The Illinois Network of Charter Schools (INCS) advocates for the improvement of public education by leveraging the charter school model as a catalyst to transform lives and communities. INCS works to ensure that charter public schools have adequate and equitable resources, the autonomy to find innovative approaches to meet student needs, and a fair and transparent policy landscape that allows high-quality options to thrive. As the voice of Illinois charter schools, INCS engages a diverse coalition of policymakers, school leaders, parents, and community members to create systemic change and secure high-quality schools for undeserved communities. Learn more about us <a target="_blank" href="https://www.incschools.org/">here</a>. 
   </p>
 
 
