--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,30 +17,32 @@
     </tr>
   </thead>
   <tbody>
-    <% @resumes.each do |resume| %>
-      <% if resume.active == false && @current_user.access == "school" %>
-      <% else %>
-        <tr>
-          <td class="res-row"><%= resume.name %></td>
-          <td class="res-row"><%= link_to "Download", resume.attachment.url %></td>
-          <% if @current_user.access != "teacher"%>
-          <% elsif resume.active == true %>
-            <td class="res-row"> Yes </td>
-          <% else %>
-            <td class="res-row"> No </td>
-          <% end %>
-          <% if @current_user.access == "teacher" %>
-            <td class="res-cell">
-              <% if resume.active == false %>
-                <%= button_to "Activate", resume, method: :put, class: "btn btn-info btn-activate" %>
-              <% else %>
-                <%= button_to "Deactivate", resume, method: :put, class: "btn btn-info btn-deactivate"%>
-              <% end %>
+    <% if @resumes.length > 0 %>
+      <% @resumes.each do |resume| %>
+        <% if resume.active == false && @current_user.access == "school" %>
+        <% else %>
+          <tr>
+            <td class="res-row"><%= resume.name %></td>
+            <td class="res-row"><%= link_to "Download", resume.attachment.url %></td>
+            <% if @current_user.access != "teacher"%>
+            <% elsif resume.active == true %>
+              <td class="res-row"> Yes </td>
+            <% else %>
+              <td class="res-row"> No </td>
+            <% end %>
+            <% if @current_user.access == "teacher" %>
+              <td class="res-cell">
+                <% if resume.active == false %>
+                  <%= button_to "Activate", resume, method: :put, class: "btn btn-info btn-activate" %>
+                <% else %>
+                  <%= button_to "Deactivate", resume, method: :put, class: "btn btn-info btn-deactivate"%>
+                <% end %>
+              </td>
+              <td class="res-cell"><%= button_to "Delete", resume, method: :delete, class: "btn btn-danger", confirm: "Are you sure that you want to delete #{resume.name}?" %>
             </td>
-            <td class="res-cell"><%= button_to "Delete", resume, method: :delete, class: "btn btn-danger", confirm: "Are you sure that you want to delete #{resume.name}?" %>
-          </td>
+          <% end %>
+          </tr>
         <% end %>
-        </tr>
       <% end %>
     <% end %>
   </tbody>
