Add search and many indexes

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -630,3 +630,9 @@ li.field-flex {
   color: #999;
   text-align: justify;
 }
+
+#search-form {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 8px;
+}
