Apply updates for 2018

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -261,6 +261,10 @@ em label {
 .bold {
   font-weight: 600;
 }
+.boldBig {
+  font-size: 1.3em;
+  font-weight: 600;
+}
 
 .centered {
   display: -webkit-flex;
