Add more 2018 updates, update auto emails

--- a/app/views/user_mailer/school_activated_email.html.erb
+++ b/app/views/user_mailer/school_activated_email.html.erb
@@ -20,7 +20,7 @@
     <p>
       Thank you,<br><br>
       Stephanie Arias<br>
-      Charter Support Manager<br>
+      Manager of Talent & Special Projects<br>
       Illinois Network of Charter Schools<br>
       150 N. Michigan Ave<br>
       Suite 430<br>
