--- a/app/views/user_mailer/school_activated_email.text.erb
+++ b/app/views/user_mailer/school_activated_email.text.erb
@@ -8,7 +8,7 @@ If you need any assistance using our database, or if you have any feedback about
 
 Thank you,
 Stephanie Arias
-Charter Support Manager
+Manager of Talent & Special Projects
 Illinois Network of Charter Schools
 150 N. Michigan Ave
 Suite 430
