--- a/app/views/user_mailer/school_email.html.erb
+++ b/app/views/user_mailer/school_email.html.erb
@@ -4,20 +4,20 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <p>Dear <%= @user.first_name %> <%= @user.last_name%>,</p>
+    <p>Dear <%=@user.first_name%> <%=@user.last_name%>,</p>
     <p>
       Thank you for your interest in the INCS Resume Bank! Your registration has been received.  Please allow up to 3 business days for INCS staff to review and process approval of your account. If delayed, please contact me directly at the email below.<br>
     </p>
     <p>
-    Once approved, you will receive a confirmation email and will be able to search for candidates and access their contact information to set up interviews according to your unique recruitment process and timeline. Please take note of the email and password you entered on the registration form, and use these to log into the Resume Bank at <a href="http://www.teacherjobfair.org">www.teacherjobfair.org</a>.
+      Once approved, you will receive a confirmation email and will be able to search for candidates and access their contact information to set up interviews according to your unique recruitment process and timeline. Please take note of the email and password you entered on the registration form, and use these to log into the Resume Bank at <a href="http://www.teacherjobfair.org">www.teacherjobfair.org</a>. If you forget your password, you may reset it <a href="www.teacherjobfair.org/sessions/new">here</a>.
     </p>
     <p>
-      Please let me know if you have any questions!<br>
+      Learn more about our 2018 Teacher & Administration Job Fair coming up on Saturday, April 7th here: www.incschools.org/events/tjf/ and don't hesitate to reach out with any questions!<br>
     </p>
     <p>Sincerely,<br><br>
 
       Stephanie Arias<br>
-      Charter Support Manager<br>
+      Manager of Talent & Special Projects<br>
       Illinois Network of Charter Schools<br>
       150 N. Michigan Ave<br>
       Suite 430<br>
