--- a/app/views/user_mailer/school_email.text.erb
+++ b/app/views/user_mailer/school_email.text.erb
@@ -2,14 +2,14 @@ Dear <%= @user.first_name %> <%= @user.last_name%>,
 
 Thank you for your interest in the INCS Resume Bank! Your registration has been received.  Please allow up to 3 business days for INCS staff to review and process approval of your account. If delayed, please contact me directly at the email below.
 
-Once approved, you will receive a confirmation email and will be able to search for candidates and access their contact information to set up interviews according to your unique recruitment process and timeline. Please take note of the email and password you entered on the registration form, and use these to log into the Resume Bank at www.teacherjobfair.org.
+Once approved, you will receive a confirmation email and will be able to search for candidates and access their contact information to set up interviews according to your unique recruitment process and timeline. Please take note of the email and password you entered on the registration form, and use these to log into the Resume Bank at www.teacherjobfair.org. If you forget your password, you may reset it here: www.teacherjobfair.org/sessions/new.
 
-Please let me know if you have any questions!
+Learn more about our 2018 Teacher & Administration Job Fair coming up on Saturday, April 7th here: www.incschools.org/events/tjf/ and don't hesitate to reach out with any questions!
 
 Sincerely,
 
 Stephanie Arias
-Charter Support Manager
+Manager of Talent & Special Projects
 Illinois Network of Charter Schools
 150 N. Michigan Ave
 Suite 430
