--- a/app/views/user_mailer/teacher_email.html.erb
+++ b/app/views/user_mailer/teacher_email.html.erb
@@ -1,29 +1,32 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
-  </head>
+<head>
+  <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
+</head>
 
-  <body>
-    <p>Dear
-    <%=@user.first_name%>,</p>
-    <p>
+<body>
+  <p>Dear <%=@user.first_name%>,</p>
+  <p>
     Thank you for using INCS’s Online Resume Bank. Your information has been received.
     <br>
-    </p>
-    <p>
-    Please keep your username and password for your records. You can log into your account at any time to upload, edit, or delete any part of your profile.
-    </p>
-
-    <p>Have you checked out our Jobs Board? Feel free to look at part-time and full-time positions across the state <a href="https://www.incschools.org/jobs/jobs-at-charter-schools/">here</a>.</p>
-
-    <p>If you need any assistance using our database, please do not hesitate to contact me at the information below.</p>
-
-    <p>
-    Best,<br>
-    <em>Stephanie Arias</em>
-    <br> Charter Support Manager
+  </p>
+  <p>
+    Please keep your username and password for your records. You can log into your account at any time to:
+    <ul>
+      <li>Register for the 2018 INCS Teacher & Administrator Job Fair on Saturday, April 7th. Learn more on the <a href="http://www.teacherjobfair.org/">INCS Resume Bank Homepage</a> and our <a href="https://www.incschools.org/events/teacher-job-fair/">Events Page</a>)</li>
+      <li>Update or delete your resume</li>
+      <li>Change your profile</li>
+    </ul>
+  </p>
+  <p>For those who registered for the job fair, logistics emails and reminders will be sent over the next few weeks. In the meantime, be sure to check the resume bank homepage and INCS website for any updates.
+  </p>
+  <p>If you have forgotten your password, please select the "forgot password" button <a href="http://www.teacherjobfair.org/sessions/new">here</a>.
+  <p><strong>Know someone interested in career opportunities as a teacher, clinician, or administrator? Please consider forwarding the blurb below.</strong></p>
+  <p><strong>Best of luck with your job search, and do not hesitate to contact me should you have any questions. </strong></p>
+    <br>
+    <br> Stephanie Arias
+    <br> Manager of Talent & Special Projects
     <br> Illinois Network of Charter Schools
     <br> 150 N. Michigan Ave
     <br> Suite 430
@@ -32,7 +35,18 @@
     <br> F 312.629.2064
     <br> sarias@incschools.org
     <br>
-    </p>
+  </p>
+  <p><strong>Thank you for sharing the blurb below.</strong></p>
+  <p>The Illinois Network of Charter Schools (INCS) will host its <a href="https://www.incschools.org/events/tjf/">13th annual Teacher Job Fair</a> on Saturday, April 7th, 2018 at Perspectives/IIT Math & Science Academy (3663 South Wabash Avenue, Chicago, IL 60653). Representatives from the state’s charter schools will be on hand to recruit hundreds of teachers, social workers, counselors, nurses, and other administrators - such as marketing managers, college coaches, and finance operators.  You can learn more about the FREE fair and upload your resume to the year-round resume bank <a href="www.teacherjobfair.org">here.</a> </p>
+  <p>Some of the great features of the job fair include:</p>
+  <ul>
+    <li>Free networking opportunity + access to over 100 school leaders looking to hire talented candidates</li>
+    <li>Opportunity to interview on-site following the meet-and-greet portion of the fair, by invite only</li>
+    <li>A year-round <a href="www.teacherjobfair.org">online resume bank</a> where candidates can submit their info to the 145+ campuses and set up interviews remotely</li>
+    <li>Per charter law, students and alumni of all academic backgrounds are welcome to apply  </li>
+  </ul>
+  <p>For more information, contact INCS Manager of Talent & Special Projects, Stephanie Arias, at sarias@incschools.org
+    <p>
+</body>
 
-  </body>
 </html>
