--- a/app/views/user_mailer/teacher_email.text.erb
+++ b/app/views/user_mailer/teacher_email.text.erb
@@ -1,15 +1,24 @@
-Dear <%= @user.first_name %>,
+Dear <%=@user.first_name%>,
 
 Thank you for using INCS’s Online Resume Bank. Your information has been received.
 
-Please keep your username and password for your records. You can log into your account at any time to upload, edit or delete any part of your profile.
+Please keep your username and password for your records. You can log into your account at any time to:
+  - Register for the 2018 INCS Teacher & Administrator Job Fair on Saturday, April 7. Learn more on the INCS Resume Bank Homepage (http://www.teacherjobfair.org/) and our Events Page (https://www.incschools.org/events/tjf/).
+  - Update or delete your resume.
+  - Change your profile.
 
- If you need any assistance using our database, please do not hesitate to contact me at the information below.  
+For those who registered for the job fair, logistics emails and reminders will be sent over the next few weeks. In the meantime, be sure to check the resume bank homepage and INCS website for any updates.
+
+If you have forgotten your password, please select the "forgot password" button at the following link: http://www.teacherjobfair.org/sessions/new. 
+
+Know someone interested in career opportunities as a teacher, clinician, or administrator? Please consider forwarding the blurb below.
+
+Best of luck with your job search, and do not hesitate to contact me should you have any questions.
 
  Best,
 
 Stephanie Arias
-Charter Support Manager
+Manager of Talent & Special Projects
 Illinois Network of Charter Schools
 150 N. Michigan Ave
 Suite 430
@@ -17,3 +26,16 @@ Chicago, IL 60601
 P 312.690.2715
 F 312.629.2064
 sarias@incschools.org
+
+Thank you for sharing the blurb below.
+
+The Illinois Network of Charter Schools (INCS) will host its 13th annual Teacher &amp; Administrator Job Fair on Saturday, April 7, 2018 at Perspectives/IIT Math &amp; Science Academy (3663 South Wabash Avenue, Chicago, IL 60653). Representatives from the state’s charter schools will be on hand to recruit hundreds of teachers, social workers, counselors, nurses, and other administrators - such as marketing managers, college coaches, and finance operators.  You can learn more about the FREE fair and upload your resume to the year-round resume bank at the following link: www.teacherjobfair.org.  
+
+Some of the great features of the job fair include: 
+  - Free networking opportunity + access to over 100 school leaders looking to hire talented candidates 
+  - Opportunity to interview on-site following the meet-and- greet portion of the fair, by invite only 
+  - A year-round online resume bank where candidates can submit their info to the 145+ campuses and set up interviews remotely 
+  - Per charter law, students and alumni of all academic backgrounds are welcome to apply   
+ 
+For more information, contact INCS Manager of Talent &amp; Special Projects, Stephanie Arias,
+at sarias@incschools.org
