--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -74,6 +74,9 @@
 <% if @current_user.access == "teacher" && @current_user.id == @user.id %>
   <div class="actions">
     <%= button_to "Edit Information", edit_user_path, :class => "btn btn-primary", :method => :get %>
+    <% if @current_user.register2018 == 'bank' || @current_user.register2018 == nil %>
+      <%= button_to "Register for 2018 Job Fair", users_register_path, :class => "btn btn-info", :method => :post %>
+    <% end %>
     <%= button_to "Delete Profile", @current_user, :class => "btn btn-danger", :method => :delete, :confirm => 'Are you sure you want to remove yourself from the INCS Resume Bank?' %>
   </div>
 <% end %>
