--- a/app/views/users/_teacher_form.html.erb
+++ b/app/views/users/_teacher_form.html.erb
@@ -74,6 +74,7 @@
   </div><br><br>
 
   <div class="field">
+    <label><em class="label-bold">What would you like to do? *</em></label><br>
     <div class="field-radio">
       <%= f.radio_button(:register2018, "bank") %>
       <%= f.label(:name, "I would like to add my resume to the INCS Online Resume Bank only.", class: 'flex-one') %><br>
