--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,7 +4,7 @@
       <%= flash[:notice] %>
     </div>
   <% end %>
-  <h1 class="main-header">Welcome to the INCS Online Resume Bank. You may register for the 2018 INCS Teacher & Administrator Job Fair and/or register for the Resume Bank below</h1>
+  <h1 class="main-header">Welcome to the INCS Online Resume Bank. You may register for the 2018 INCS Teacher & Administrator Job Fair and/or register for the Resume Bank below.</h1>
 
   <% if session[:user_id] != nil && User.find(session[:user_id]).access == 'pending' %>
     <p>Thank you for your registration. Please allow up to 2 business days for INCS staff to process approval of your account. You have received an email with further information.</p>
@@ -45,9 +45,9 @@ Resume Bank Registration” above.</li>
       <strong>Schools will have the opportunity to:</strong>
       <ul class="main-content-list">
         <li>Meet with hundreds of educators.</li>
-        <li>View candidates’ resumes ahead of time using the INCS Online Resume Bank (simply register by selecting “Hiring Manager Registration” above.</li>
+        <li>View candidates’ resumes ahead of time using the INCS Online Resume Bank - simply register by selecting “Hiring Manager Registration” above.</li>
         <li>Invite candidates for on-site interviews following the meet-and- greet portion of the event.</li>
-        <li>School leaders may learn more about the fair and register <a href="https://www.incschools.org/events/tjf/">here</a></li>
+        <li>School leaders may learn more about the fair and register <a href="https://www.incschools.org/events/tjf/">here</a>.</li>
       </ul>
     </p>
 
@@ -55,9 +55,13 @@ Resume Bank Registration” above.</li>
     <ul class="main-content-list">
       <li>8:30 am -9:30 am: School table set-up</li>
       <li>9:15 am - 10:00 am: Candidate registration</li>
-      <li>10:00 am - 12:00 pm: Meet and Greet with candidates and schools</li>
-      <li>12:00 pm - 1:30 pm: On-site teacher interviews (by invitation from charter school leaders only)</li>
+      <li>10:00 am - 12:00 pm: Meet-and-Greet with candidates and schools</li>
+      <li>12:00 pm - 1:30 pm: On-site teacher interviews (by invitation from charter school leaders only*)</li>
     </ul>
+
+    <p class="main-content">
+      * These interviews are fully at the discretion of charter school leaders, who may contact you in advance or invite you in person upon meeting you at the Meet-and-Greet portion of the fair. INCS does not have any additional information to share with candidates at this time.
+    </p>
 
     <p class="main-content"><strong>Location:</strong></p>
     <p class="main-content">
@@ -79,7 +83,7 @@ Resume Bank Registration” above.</li>
     </p>
 
     <p class="main-content">
-      If you have any questions about this tool or the Illinois Network of Charter Schools,  or would like to receive a 2017 Teacher Job Fair flyer, please contact Stephanie Arias, INCS Charter Support Manager, at <%=mail_to("SArias@incschools.org")%>
+      If you have any questions about this tool or the Illinois Network of Charter Schools, or would like to receive a 2018 Teacher & Administrator Job Fair flyer, please contact Stephanie Arias, INCS Charter Support Manager, at <%=mail_to("SArias@incschools.org")%>
     </p>
   </p>
 
