Update things for after 2018 job fair

--- a/app/views/user_mailer/school_activated_email.html.erb
+++ b/app/views/user_mailer/school_activated_email.html.erb
@@ -6,11 +6,11 @@
   <body>
     <p>Dear <%= @user.first_name %> <%= @user.last_name%>,</p>
     <p>
-      Your registration has been approved, and you can now access the INCS Resume Bank at <a target="_blank" href="http://www.teacherjobfair.org/sessions/new">www.teacherjobfair.org</a>. Search for candidates, browse through their registration summaries, and download the resumes that you select.<br>
+      Your registration has been approved, and you can now access the INCS Resume Bank at <a target="_blank" href="http://www.teacherjobfair.org/sessions/new">www.teacherjobfair.org</a>.
     </p>
 
     <p>
-    Please use the email and password you entered on the registration page to log in. If you have forgotten your login credentials, please select "forgot password" on the bottom of the log-in page, <a target="_blank" href="http://www.teacherjobfair.org/sessions/new">here</a>.
+    With your account, you can search for candidates that meet your team needs, browse through their registration summaries, and download the resumes that you select.
     </p>
 
     <p>
@@ -18,16 +18,12 @@
     </p>
 
     <p>
-      Thank you,<br><br>
-      Stephanie Arias<br>
-      Manager of Talent & Special Projects<br>
-      Illinois Network of Charter Schools<br>
-      150 N. Michigan Ave<br>
-      Suite 430<br>
-      Chicago, IL 60601<br>
-      P 312.690.2715<br>
-      F 312.629.2064<br>
-      sarias@incschools.org<br>
+    Thank you,<br><br>
+    Allison Jack<br>
+    Illinois Network of Charter Schools<br>
+    Director of Charter Support & Growth<br>
+    AJack@incschools.org<br>
+    312.690.2708<br>
     </p>
   </body>
 </html>
