--- a/app/views/user_mailer/school_activated_email.text.erb
+++ b/app/views/user_mailer/school_activated_email.text.erb
@@ -1,18 +1,15 @@
 Dear <%= @user.first_name %> <%= @user.last_name %>
 
-Your registration has been approved, and you can now access the INCS Resume Bank at www.teacherjobfair.org. Search for candidates, browse through their registration summaries, and download the resumes that you select.
+Your registration has been approved, and you can now access the INCS Resume Bank at www.teacherjobfair.org.
 
-Please use the email and password you entered on the registration page to log in. If you have forgotten your login credentials, please select “forgot password” on the bottom of the log-in page, www.teacherjobfair.org/sessions/new.
+With your account, you can search for candidates that meet your team needs, browse through their registration summaries, and download the resumes that you select.
 
 If you need any assistance using our database, or if you have any feedback about the site, please do not hesitate to contact me at the information below.
 
 Thank you,
-Stephanie Arias
-Manager of Talent & Special Projects
+
+Allison Jack
 Illinois Network of Charter Schools
-150 N. Michigan Ave
-Suite 430
-Chicago, IL 60601
-P 312.690.2715
-F 312.629.2064
-sarias@incschools.org
+Director of Charter Support & Growth
+AJack@incschools.org
+312.690.2708
