--- a/app/views/user_mailer/school_email.text.erb
+++ b/app/views/user_mailer/school_email.text.erb
@@ -4,16 +4,12 @@ Thank you for your interest in the INCS Resume Bank! Your registration has been 
 
 Once approved, you will receive a confirmation email and will be able to search for candidates and access their contact information to set up interviews according to your unique recruitment process and timeline. Please take note of the email and password you entered on the registration form, and use these to log into the Resume Bank at www.teacherjobfair.org. If you forget your password, you may reset it here: www.teacherjobfair.org/sessions/new.
 
-Learn more about our 2018 Teacher & Administration Job Fair coming up on Saturday, April 7th here: www.incschools.org/events/tjf/ and don't hesitate to reach out with any questions!
+Please let me know if you have any questions.
 
 Sincerely,
 
-Stephanie Arias
-Manager of Talent & Special Projects
+Allison Jack
 Illinois Network of Charter Schools
-150 N. Michigan Ave
-Suite 430
-Chicago, IL 60601
-P 312.690.2715
-F 312.629.2064
-sarias@incschools.org
+Director of Charter Support & Growth
+AJack@incschools.org
+312.690.2708
