--- a/app/views/user_mailer/steph_email.html.erb
+++ b/app/views/user_mailer/steph_email.html.erb
@@ -4,7 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>HEY STEPH!</h1>
+    <h1>Hey Allison!</h1>
     <p>This school leader just signed up:</p>
     <ul>
       <li>Name: <%= @user.first_name %> <%= @user.last_name %></li>
