--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -26,51 +26,11 @@
 
   <p class="main-content">
     <p class="main-content">
-    The Illinois Network of Charter Schools (INCS) will host its 13th annual Teacher & Administrator Job Fair on <span class="boldBig">Saturday, April 7, 2018</span>. Representatives from charter schools across the state will be on hand to recruit hundreds of teachers, social workers, counselors, nurses, and other administrators. INCS seeks highly qualified candidates who are excited to work in a mission-drive environment and are ready to TEACH, LEAD, and SUCCEED. To upload your resume into our year-round database, please select “Candidate Resume Bank Registration” above.
-    </p>
-    <br>
-
-    <p class="main-content">
-      <strong>Teachers and Administrators will have the opportunity to:</strong>
-      <ul class="main-content-list">
-        <li>Meet recruiters from over 50 public charter schools representing over 120 campuses.</li>
-        <li>Post your resume in the INCS Online Resume Bank, which is circulated to Illinois charter school hiring
-managers year-round. To upload your resume into our year-round database, please select “Candidate
-Resume Bank Registration” above.</li>
-        <li>Interview on-site with schools looking to hire exceptional talent.</li>
-      </ul>
+    The Illinois Network of Charter Schools (INCS) hosted our 13th annual Teacher Job Fair on Saturday, April 7, 2018 at Perspectives/IIT Math &amp; Science Academy. Representatives from the state’s charter schools were on hand to recruit hundreds of teachers, social workers, counselors, nurses, and other administrators.
     </p>
 
     <p class="main-content">
-      <strong>Schools will have the opportunity to:</strong>
-      <ul class="main-content-list">
-        <li>Meet with hundreds of educators.</li>
-        <li>View candidates’ resumes ahead of time using the INCS Online Resume Bank - simply register by selecting “Hiring Manager Registration” above.</li>
-        <li>Invite candidates for on-site interviews following the meet-and- greet portion of the event.</li>
-        <li>School leaders may learn more about the fair and register <a href="https://www.incschools.org/events/tjf/">here</a>.</li>
-      </ul>
-    </p>
-
-    <p class="main-content"><strong>Agenda:</strong></p>
-    <ul class="main-content-list">
-      <li>8:30 am -9:30 am: School table set-up</li>
-      <li>9:15 am - 10:00 am: Candidate registration</li>
-      <li>10:00 am - 12:00 pm: Meet-and-Greet with candidates and schools</li>
-      <li>12:00 pm - 1:30 pm: On-site teacher interviews (by invitation from charter school leaders only*)</li>
-    </ul>
-
-    <p class="main-content">
-      * These interviews are fully at the discretion of charter school leaders, who may contact you in advance or invite you in person upon meeting you at the Meet-and-Greet portion of the fair. INCS does not have any additional information to share with candidates at this time.
-    </p>
-
-    <p class="main-content"><strong>Location:</strong></p>
-    <p class="main-content">
-      <a href="http://pcsedu.org/MSA/about/location">Perspectives/IIT Math & Science Academy: 3663 South Wabash Avenue, Chicago, IL, 60653</a>
-    </p>
-
-    <p class="main-content"><strong>Parking:</strong></p>
-    <p class="main-content">
-      Parking is limited and public transportation is encouraged. Please be aware of permitted parking zones. Candidates are permitted to park in the school parking lot.
+    INCS continues to seek highly qualified candidates who are excited to work in a mission-driven environment and to TEACH, LEAD, and SUCCEED. To upload your resume into our resume database, which is available to Illinois charter school hiring managers year-round, please select “Candidate Resume Bank Registration” above.
     </p>
     <br>
 
@@ -80,10 +40,6 @@ Resume Bank Registration” above.</li>
 
     <p class="main-content">
       To find a charter public school near you, please visit us <a href="https://www.incschools.org/about-charters/find-a-charter-school/">here</a>.
-    </p>
-
-    <p class="main-content">
-      If you have any questions about this tool or the Illinois Network of Charter Schools, or would like to receive a 2018 Teacher & Administrator Job Fair flyer, please contact Stephanie Arias, INCS Charter Support Manager, at <%=mail_to("SArias@incschools.org")%>
     </p>
   </p>
 
