Remove link on banner

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,9 +32,8 @@
         <li role="presentation"><%=link_to "Log In", new_session_path %></li>
       <% end %>
     </ul>
-    <div class="banner"><a href="https://www.incschools.org/events/tjf/">
+    <div class="banner">
       <%= image_tag("banner.png", width:"100%") %>
-      </a>
     </div>
     </nav>
   <div class="container" style="padding-top:80px;">
