--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
         <% elsif User.find(session[:user_id]).access == "pending" %>
 
         <% elsif User.find(session[:user_id]).access == "admin" %>
+          <li role="presentation"><a href="/admin">Admin</a></li>
           <li role="presentation"><a href="/users/pending">Pending Schools</a></li>
           <li role="presentation"><a href="/users/schools">All Schools</a></li>
           <li role="presentation"><a href="/users/teachers">All Candidates</a></li>
