--- a/app/views/users/_teacher_form.html.erb
+++ b/app/views/users/_teacher_form.html.erb
@@ -38,8 +38,18 @@
   </div>
 
   <div class="field field-flex">
+    <em class="teacher-label"><%= f.label(:name, "Please confirm your email address *") %></em>
+    <%= f.text_field :email_confirmation, class: 'med-field' %>
+  </div>
+
+  <div class="field field-flex">
     <em class="teacher-label"><%= f.label(:name, "What would you like your resume bank password to be? *") %></em>
     <%= f.password_field :password %>
+  </div>
+
+  <div class="field field-flex">
+    <em class="teacher-label"><%= f.label(:name, "Please confirm your password *") %></em>
+    <%= f.password_field :password_confirmation %>
   </div>
 
   <div class="field field-flex">
