--- a/app/views/users/_school_form.html.erb
+++ b/app/views/users/_school_form.html.erb
@@ -33,8 +33,16 @@
     <%= f.text_field :email, size: 45 %><br>
   </div>
   <div class="field field-flex">
+    <%= f.label :email_confirmation, :class => 'teacher-label' %><br>
+    <%= f.text_field :email_confirmation, size: 45 %><br>
+  </div>
+  <div class="field field-flex">
     <%= f.label :password, :class => 'teacher-label' %><br>
     <%= f.password_field :password %><br>
+  </div>
+  <div class="field field-flex">
+    <%= f.label :password_confirmation, :class => 'teacher-label' %><br>
+    <%= f.password_field :password_confirmation %>
   </div>
 
   <div class="actions">
